--- a/dot_config/opencode/config.json
+++ b/dot_config/opencode/config.json
@@ -1,7 +1,11 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "model": "zai-coding-plan/glm-4.6",
-  "theme": "basic",
+  "theme": "catppuccin",
+  "keybinds": {
+    "input_submit": "alt+enter",
+    "input_newline": "enter"
+  },
   "agent": {
     "code-reviewer": {
       "description": "Reviews code for best practices and potential issues",
