updated tmux config

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,4 +1,3 @@
-HOME_DIR="{{- .chezmoi.homeDir }}"
 
 # bootstrap tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
@@ -8,6 +7,9 @@ source-file ~/.config/tmux/tmux.reset.conf
 set-option -g default-terminal 'screen-256color'
 # set-option -g default-terminal 'tmux-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
+
+# Mouse
+set -g mouse on
 
 set -g prefix C-a
 set -g base-index 1              # start indexing windows at 1 instead of 0
@@ -43,8 +45,11 @@ set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 # set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurect-processes 'nvim'
 
 
+# Floating window
 set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-width '60%'
 set -g @floax-height '60%'
@@ -52,26 +57,9 @@ set -g @floax-border-color 'magenta'
 set -g @floax-text-color 'blue'
 set -g @floax-bind 'u'
 set -g @floax-change-path 'true'
+
 source-file ~/.config/tmux/statusbar.conf
+source-file ~/.config/tmux/sessionx.conf
 
-
-set -g @plugin 'omerxx/tmux-sessionx' # Need to detach to 3a1911e for this to work in mac
-set -g @sessionx-prefix off
-set -g @sessionx-bind 'C-f'
-# set -g @sessionx-filtered-sessions 'nested-'
-# set -g @sessionx-bind-zo-new-window 'ctrl-y'
-# set -g @sessionx-auto-accept 'off'
-set -g @sessionx-custom-paths "$HOME_DIR/Projects"
-set -g @sessionx-fzf-builtin-tmux 'on'
-set -g @sessionx-x-path "$HOME_DIR/.config"
-set -g @sessionx-window-height '75%'
-set -g @sessionx-window-width '65%'
-set -g @sessionx-zoxide-mode 'on'
-set -g @sessionx-custom-paths-subdirectories 'true'
-# set -g @sessionx-preview-location 'right'
-# set -g @sessionx-preview-ratio '55%'
-set -g @sessionx-additional-options "--color pointer:9,spinner:92,marker:46"
-set -g @sessionx-filtered-sessions 'scratch'
-# set -g @sessionx-filter-current 'false'
 
 run '~/.tmux/plugins/tpm/tpm'
